importer started and resource shader created

--- a/GenesisEngine/Source/GenesisEngine.vcxproj.filters
+++ b/GenesisEngine/Source/GenesisEngine.vcxproj.filters
@@ -230,6 +230,12 @@
     <ClCompile Include="TextureImporter.cpp">
       <Filter>FileManagement\Importers</Filter>
     </ClCompile>
+    <ClCompile Include="ResourceShader.cpp">
+      <Filter>Resources</Filter>
+    </ClCompile>
+    <ClCompile Include="ShaderImporter.cpp">
+      <Filter>FileManagement\Importers</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -573,6 +579,12 @@
       <Filter>FileManagement\Importers</Filter>
     </ClInclude>
     <ClInclude Include="Importers.h">
+      <Filter>FileManagement\Importers</Filter>
+    </ClInclude>
+    <ClInclude Include="ResourceShader.h">
+      <Filter>Resources</Filter>
+    </ClInclude>
+    <ClInclude Include="ShaderImporter.h">
       <Filter>FileManagement\Importers</Filter>
     </ClInclude>
   </ItemGroup>
