--- a/GenesisEngine/Source/GenesisEngine.vcxproj
+++ b/GenesisEngine/Source/GenesisEngine.vcxproj
@@ -198,7 +198,9 @@
     <ClInclude Include="ResourceMaterial.h" />
     <ClInclude Include="ResourceMesh.h" />
     <ClInclude Include="ResourceModel.h" />
+    <ClInclude Include="ResourceShader.h" />
     <ClInclude Include="ResourceTexture.h" />
+    <ClInclude Include="ShaderImporter.h" />
     <ClInclude Include="TextureImporter.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="Timer.h" />
@@ -279,7 +281,9 @@
     <ClCompile Include="ResourceMaterial.cpp" />
     <ClCompile Include="ResourceMesh.cpp" />
     <ClCompile Include="ResourceModel.cpp" />
+    <ClCompile Include="ResourceShader.cpp" />
     <ClCompile Include="ResourceTexture.cpp" />
+    <ClCompile Include="ShaderImporter.cpp" />
     <ClCompile Include="TextureImporter.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="Timer.cpp" />
